--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
 		"afterlogic/aurora-framework": "~0.9.0"
 	},
 	"extra": {
-		"installer-name": "MailSignupWebclient"
+		"installer-name": "MailSignup"
 	}
 }
