--- a/config.json
+++ b/config.json
@@ -1,30 +1,58 @@
 {
-	"Disabled": [
-		false,
-		"bool"
-	],
-	"ServerModuleName": [
-		"MailSignup",
-		"string"
-	],
-	"HashModuleName": [
-		"signup",
-		"string"
-	],
-	"CustomLogoUrl": [
-		"",
-		"string"
-	],
-	"InfoText": [
-		"",
-		"string"
-	],
-	"BottomInfoHtmlText": [
-		"",
-		"string"
-	],
-	"DomainList": [
-		[],
-		"array"
-	]
+  "Disabled": [
+    false,
+    "bool"
+  ],
+  "Disabled_Description": [
+    "",
+    "string"
+  ],
+  "ServerModuleName": [
+    "MailSignup",
+    "string"
+  ],
+  "ServerModuleName_Description": [
+    "",
+    "string"
+  ],
+  "HashModuleName": [
+    "signup",
+    "string"
+  ],
+  "HashModuleName_Description": [
+    "",
+    "string"
+  ],
+  "CustomLogoUrl": [
+    "",
+    "string"
+  ],
+  "CustomLogoUrl_Description": [
+    "",
+    "string"
+  ],
+  "InfoText": [
+    "",
+    "string"
+  ],
+  "InfoText_Description": [
+    "",
+    "string"
+  ],
+  "BottomInfoHtmlText": [
+    "",
+    "string"
+  ],
+  "BottomInfoHtmlText_Description": [
+    "",
+    "string"
+  ],
+  "DomainList": [
+    [],
+    "array"
+  ],
+  "DomainList_Description": [
+    "",
+    "string"
+  ]
 }
